out.txt
   Compiling wknup v0.1.0 (/home/yaroslav/Projects/rust/wknup)
error: expected expression, found `%`
  --> src/vk.rs:56:34
   |
56 |             .enabled_layer_names(%self.validation_manager.make_load_layer_list()?);
   |                                  ^ expected expression

error[E0106]: missing lifetime specifier
  --> src/vk.rs:14:15
   |
14 |     app_info: ApplicationInfo,
   |               ^^^^^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider using the `'a` lifetime
   |
14 |     app_info: ApplicationInfo<'a>,
   |                              ++++

error[E0261]: use of undeclared lifetime name `'a`
  --> src/vk.rs:22:22
   |
22 | impl InstanceManager<'a> {
   |     -                ^^ undeclared lifetime
   |     |
   |     help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'a`
  --> src/vk.rs:23:21
   |
23 |     fn init(entry: &'a Entry) -> Result<Self, Box<dyn Error>>{
   |                     ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
23 |     fn init<'a>(entry: &'a Entry) -> Result<Self, Box<dyn Error>>{
   |            ++++
help: consider introducing lifetime `'a` here
   |
22 | impl<'a> InstanceManager<'a> {
   |     ++++

error[E0726]: implicit elided lifetime not allowed here
  --> src/vk.rs:63:15
   |
63 | impl Drop for InstanceManager {
   |               ^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
63 | impl Drop for InstanceManager<'_> {
   |                              ++++

error[E0106]: missing lifetime specifier
  --> src/vk.rs:73:23
   |
73 |     instance_manager: InstanceManager,
   |                       ^^^^^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
71 ~ pub struct VulkanManager<'a> {
72 |     entry: Entry,
73 ~     instance_manager: InstanceManager<'a>,
   |

error[E0425]: cannot find value `validation_layer_names` in this scope
  --> src/vk.rs:99:35
   |
99 |             .enabled_layer_names(&validation_layer_names)
   |                                   ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `extension_names` in this scope
   --> src/vk.rs:100:39
    |
100 |             .enabled_extension_names(&extension_names);
    |                                       ^^^^^^^^^^^^^^^ not found in this scope

warning: unused imports: `DeviceCreateInfo`, `DeviceQueueCreateInfo`, `Device`, `InstanceCreateInfo`, `PhysicalDeviceFeatures`, `PhysicalDeviceType`, `PhysicalDevice`, `QueueFamilyProperties`, `QueueFlags`, `Queue`, `SurfaceKHR`, `self`, and `surface`
 --> src/vk.rs:2:11
  |
2 | ...khr::{self, surface}, vk::{
  |          ^^^^  ^^^^^^^
3 | ...    self, ApplicationInfo, DeviceCreateInfo, DeviceQueueCreateInfo, InstanceCreateInfo, PhysicalDevice, PhysicalDeviceFeatures, PhysicalDeviceType, Queue, QueueFamilyProperties, QueueFlags, SurfaceKHR
  |                               ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^  ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^
4 | ...}, Device, Entry, Instance
  |       ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `rc::Rc` and `vec::IntoIter`
 --> src/vk.rs:7:25
  |
7 | use std::{error::Error, rc::Rc, vec::IntoIter};
  |                         ^^^^^^  ^^^^^^^^^^^^^

warning: unused variable: `surface_khr`
   --> src/vk.rs:138:21
    |
138 |         if let Some(surface_khr) = self.surface.take() {
    |                     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_surface_khr`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unnecessary `unsafe` block
   --> src/vk.rs:139:13
    |
139 |             unsafe {
    |             ^^^^^^ unnecessary `unsafe` block
    |
    = note: `#[warn(unused_unsafe)]` on by default

Some errors have detailed explanations: E0106, E0261, E0425, E0726.
For more information about an error, try `rustc --explain E0106`.
warning: `wknup` (lib) generated 4 warnings
error: could not compile `wknup` (lib) due to 8 previous errors; 4 warnings emitted
